--- a/amulapp/src/main/res/drawable/edt_white_bg.xml
+++ b/amulapp/src/main/res/drawable/edt_white_bg.xml
@@ -8,6 +8,7 @@
             <item >
                 <shape
                     android:shape="rectangle">
+                    <corners android:radius="5dp" />
                     <stroke
                         android:width="1dp"
                         android:color="@android:color/black"/>
