--- a/amulapp/src/main/res/layout/activity_main.xml
+++ b/amulapp/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
@@ -9,13 +10,14 @@
         android:id="@+id/main_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/lay_bottom"
+        android:layout_above="@+id/bottom_navigation"
         android:background="@android:color/transparent"
         android:orientation="vertical" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:visibility="gone"
         android:layout_above="@+id/lay_bottom"
         android:background="@android:color/black" />
 
@@ -60,5 +62,15 @@
             android:text="@string/history" />
 
     </LinearLayout>
-
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@drawable/color_drawable"
+        app:itemTextColor="@drawable/color_drawable"
+        app:menu="@menu/bottom_navigation_main" />
 </RelativeLayout>
