--- a/amulapp/src/main/res/layout/list_item_dcs.xml
+++ b/amulapp/src/main/res/layout/list_item_dcs.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="100dp"
     android:orientation="horizontal"
+    android:layout_margin="5dp"
     android:weightSum="1">
 
     <ImageView
@@ -17,22 +18,22 @@
         android:layout_height="match_parent"
         android:paddingLeft="5dp"
         android:layout_weight=".6"
-        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvheader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvsubheader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:layout_marginBottom="2dp"
+            android:textSize="14sp"
+             />
     </LinearLayout>
 
     <ImageView
