--- a/amulapp/src/main/res/values/colors.xml
+++ b/amulapp/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C21807</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+
+    <color name="colorPrimary">#D2232A</color>
+    <color name="colorPrimaryDark">#ba000d</color>
+    <color name="colorAccent">#ff7961</color>
     <color name="yellow">#FF9933</color>
     <color name="orange">#FF5722</color>
     <color name="red">#D2232A</color>
@@ -10,4 +11,6 @@
     <color name="list_divider">#EBEBEB</color>
     <color name="grey">@android:color/darker_gray</color>
     <color name="header_color">@android:color/black</color>
+
+    <color name="color_light">#80ffffff</color>
 </resources>
