--- a/amulapp/src/main/res/values/dimens.xml
+++ b/amulapp/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -15,4 +15,6 @@
     <dimen name="general_txt_margin">10dp</dimen>
     <dimen name="header_txt_size">16sp</dimen>
     <dimen name="logout_icon_size">24dp</dimen>
+    <dimen name="design_bottom_navigation_text_size" tools:override="true">18sp</dimen>
+    <dimen name="design_bottom_navigation_active_text_size" tools:override="true">18sp</dimen>
 </resources>
