--- a/amulapp/src/main/res/layout/lay_login.xml
+++ b/amulapp/src/main/res/layout/lay_login.xml
@@ -29,9 +29,11 @@
             android:layout_below="@+id/header_img"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:gravity="center_horizontal"
+            android:textAllCaps="true"
             android:text="@string/login_title"
+            android:textStyle="bold"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/edt_email"
